cluster/required-label-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: all-must-have-environment-label
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Namespace"]
    excludedNamespaces:
    - asm-system
    - cnrm-system
    - config-management-system
    - configconnector-operator-system
    - default
    - gatekeeper-system
    - gke-connect
    - istio-system
    - kube-node-lease
    - kube-public
    - kube-system            
  parameters:
    message: "All namespaces must have an `environment` label"
    labels:
    - key: environment
